fix: fixed icon spacing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ header .container{
 header {
     background-color: #ff6900;
     color: #e7e7e7;
+    box-shadow: 2px 2px #888888;
 }
 header img {
     width: 150px;
+}
+.symbol{
+    margin: 0px 4px;
 }
